<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/MyMaterialTheme"
    tools:context="com.parse.anyphone.UserTypeActivity">

    <Button
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:text="@string/artist"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:text="@string/customer"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:id="@+id/button"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:text="@string/login"
        android:id="@+id/button5"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:text="@string/florist"
        android:id="@+id/button3"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:text="@string/photographer"
        android:id="@+id/button2"
        android:layout_marginBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
