<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MyMaterialTheme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parse.anyphone.SignUpActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <AutoCompleteTextView
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/firstName"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/LightGrey"
                    android:paddingLeft="25dp"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/colorPrimaryDark" />

            <AutoCompleteTextView
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/LightGrey"
                android:paddingLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/LightGrey"
                android:paddingLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp">-->

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/LightGrey"
                    android:paddingLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/colorPrimaryDark"/>

            <!--</android.support.design.widget.TextInputLayout>-->

            <AutoCompleteTextView
                android:id="@+id/budget"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/budget"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/LightGrey"
                android:paddingLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark" />

            <AutoCompleteTextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/number_default"
                android:textColorHint="@color/LightGrey"
                android:paddingLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/icons"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginValidationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Login Validation"
                android:visibility="gone"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
