<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.parse.anyphone.LoginActivity"
    style="@style/MyMaterialTheme">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/LightGrey"
            android:paddingLeft="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/colorPrimaryDark" />

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp">-->

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/LightGrey"
            android:paddingLeft="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/colorPrimaryDark"/>

        <CheckBox android:id="@+id/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:text="LogIn"
            android:id="@+id/login"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/icons"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:visibility="gone" />

</RelativeLayout>
